Fixed spacing

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -28,7 +28,7 @@ nav {
   background: black;
   color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0 20px;
 }
